# llm-api-logger

./: .gitignore  CHANGELOG.md  CITATION.cff  README.md  conftest.py  gui.py  llm_api_logger.py  llm_api_logger_gui.py  paper.bib  paper.md  pyproject.toml
src/llm_api_logger/: __init__.py  gui.py  logger.py  proxy.py  store.py
tests/: test_llm_api_logger.py  test_store_proxy.py
