[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-api-logger"
version = "0.1.0"
description = "Middleware HTTP logger for LLM API calls with JSONL and SQLite backends"
readme = "README.md"
license = {file = "LICENSE"}
authors = [{name = "Vaibhav Deshmukh", email = "vdeshmukh203@gmail.com"}]
requires-python = ">=3.8"
keywords = ["llm", "logging", "openai", "anthropic", "middleware", "cost", "reproducibility"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Logging",
]

[project.scripts]
llm-api-logger     = "llm_api_logger:main"
llm-api-logger-gui = "llm_api_logger_gui:main_gui"

[tool.setuptools]
py-modules = ["llm_api_logger", "llm_api_logger_gui"]

[tool.pytest.ini_options]
testpaths = ["tests"]
