[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-api-logger"
version = "1.0.0"
description = "Middleware logger for LLM API calls with SQLite/JSONL backends and a desktop GUI"
readme = "README.md"
license = {file = "LICENSE"}
authors = [{name = "Vaibhav Deshmukh", email = "vdeshmukh203@gmail.com"}]
requires-python = ">=3.8"
keywords = ["llm", "logging", "openai", "anthropic", "middleware", "cost", "reproducibility"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Logging",
]

[project.scripts]
llm-api-logger = "llm_api_logger:main"
llm-api-logger-gui = "llm_api_logger_gui:main"

[tool.setuptools]
py-modules = ["llm_api_logger", "llm_api_logger_gui"]

[tool.pytest.ini_options]
testpaths = ["tests"]
